# duckflow

./: .env.template  .gitignore  4NODE_MIGRATION_PLAN.md  AGENTS.md  CLAUDE.md  DEMO_GUIDE.md  DUCKFLOW_IMPLEMENTATION_DETAILS.md  MAIN_COMPANION_INTEGRATION_COMPLETE.md  NEXT_STEPS_ROADMAP.md  OBSOLETE_FILES_REPORT.md  PHASE1_SUCCESS_AND_NEXT_STEPS.md  PROGRESS.md  README.md  TEST_EXECUTION_REPORT.md  __init__.py  current_data_flow_diagram.md  debug_dual_loop.py  debug_file_access.py  debug_groq_errors.py  demo_llm_classification.py  demo_plan_tool.py  demo_test.py  design-doc.md  direct_file_test.py  duckflow.yaml  fix_llm_manager_error.py  how e5e8c79 --name-only  improved_dual_loop_flow.md  interactive_test.py  main.py  main_companion.py  plantool_symops_analysis.md  promptsmith_corrected_evaluation_report.md  promptsmith_evaluation_report.md  promptsmith_phase1_detailed_plan.md  promptsmith_score_improvement_plan.md  pyproject.toml  requirements.txt  run_duckflow_v2.py  test_advanced_exploration_engine.py  (+46 more)
codecrafter/: main.py  main_v2.py
companion/: __init__.py  approval_response_handler.py  approval_system.py  approval_ui.py  chat_loop.py  code_runner.py  core.py  dual_loop.py  enhanced_core.py  enhanced_core_v8.py  enhanced_dual_loop.py  env_example.txt  error_recovery_system.py  file_ops.py  help_system.py  hierarchical_task_manager.py  improved_mock_llm.py  integration_bridge.py  llm_call_manager.py  plan_tool.py  shared_context_manager.py  simple_approval.py  simple_test.py  state_machine.py  task_loop.py  test_integration_bridge.py  test_intent_system.py  test_mock_llm.py  ui.py  v7_plan_tool.py  v7_task_tool.py  workspace_manager.py
config/: config.yaml  task_classification_prompts.yaml
docs/: LLM_Services.md  LLM_TaskProfile_Classification_System.md  SANDBOX_EVALUATION_PLAN.md  Self_Correcting_Loop.md  Sym-Ops Protocol .md  Sym-Ops v2.md  TaskProfile.md  additional_features_implementation_plan.md  design-docs_v6.md  duckFileSystem.md  duck_call.md  duck_pacemaker_dynamic_design_simple.md  duckflow_format.md  feature_selection_rationale.md  golden_fish_memory_protocol.md  implementation_plan_v4_part2.md  memory_manager_design.md  pecking_order.md  promptsmith_file_analysis_scenarios.md  quack_overflow_alarm.md  前処理パターン補正.md
flowspec/: flow.chat_plan_execute.v1.yaml  flow.code_execution_v1.yaml  flow.direct_response.v1.yaml  flow.docs_generation_system.v1.yaml  flow.duckflow_chat_flow.v1.yaml  flow.dummy.v1.yaml  flow.file_operation.v1.yaml  flow.multi_step_task.v1.yaml
promptsmith_results/: cycle_20250808_210700.json  cycle_20250808_215230.json  cycle_20250808_215327.json  cycle_20250808_215436.json  cycle_20250808_220204.json  cycle_20250808_221006.json  cycle_20250808_221140.json  cycle_20250809_015940.json
reference_code/: advanced_file_ops.py  checkpoint_manager.py  collaborative_planner.py  hierarchical_task_manager.py
reports/: e2e.json  unit.json
scripts/: compile_flows.py  metrics.py  run_promptsmith.py
temp_test_files/: README.md  game_doc.md  phase1_flow_sample.txt
tests/: README.md  conftest.py  setup_test_config.py  teardown_test_config.py  test_agent_state.py  test_approval_config.py  test_approval_gate.py  test_approval_gate_config.py  test_approval_integration.py  test_approval_response_handler.py  test_approval_security.py  test_approval_system_automated.py  test_approval_system_comprehensive.py  test_approval_system_data.py  test_approval_system_existing_integration.py  test_approval_system_integration.py  test_approval_ui.py  test_companion_core_approval_integration.py  test_compile_flows.py  (+19 more)
(+436 files in other folders)
